feat(user): polish profile image handling